--- a/Saksiske_goden.mw
+++ b/Saksiske_goden.mw
@@ -7,160 +7,160 @@ Der most sowat de stam oaf plaatse wal nye goden weasen. Ouk in de tyd bint der 
 
 {| class="wikitable" width="100%"
 !Germaanske name ||Noordse name ||döt||eagenskap||Opmarking||evünden
-|- style="background:#eeeeee"
+|- style="background-color:#eeeeee"
 | '''[[Wodan]]'''; '''Woutan'''; '''Weda'''; '''Woden'''
-|| ''Odin''
-|| Höyvdgod
-|| wulven, raven, achtbeynig paerd, speyre, 
-|| [[Wilde Jacht]]
-|| [[Oldsaksiese deupgelofte|Oldsassiske dööpbelovte]]; [[Merseburger teuverspreuken|Mersebürger töverspröäken]]; Beda; Edda
-|- style="background:#B0E0E6"
+| ''Odin''
+| Höyvdgod
+| wulven, raven, achtbeynig paerd, speyre, 
+| [[Wilde Jacht]]
+| [[Oldsaksiese deupgelofte|Oldsassiske dööpbelovte]]; [[Merseburger teuverspreuken|Mersebürger töverspröäken]]; Beda; Edda
+|- style="background-color:#B0E0E6"
 | '''[[Donar]]'''; '''Thunaer'''; '''Tonger'''
-|| ''Thor''
-|| Dundergod
-|| Hamer
-|| Döt med hamer bliksem en dunder
-|| Oldsassiske dööpbelovte; Edda
-|- style="background:#eeeeee"
+| ''Thor''
+| Dundergod
+| Hamer
+| Döt med hamer bliksem en dunder
+| Oldsassiske dööpbelovte; Edda
+|- style="background-color:#eeeeee"
 | '''(H)irmin'''; '''(H)ermen'''
-|| ''Jörmunr'' 
-|| vöärolder van de [[Herminones]]
-|| De Sassen döden hüm vereyren in ear [[Irminsul]]
-|| name beteakend ''groot'', ''wyd", ''drager''
-|| [[Vita Karoli Magni]]
-|- style="background:#B0E0E6"
+| ''Jörmunr'' 
+| vöärolder van de [[Herminones]]
+| De Sassen döden hüm vereyren in ear [[Irminsul]]
+| name beteakend ''groot'', ''wyd'', ''drager''
+| [[Vita Karoli Magni]]
+|- style="background-color:#B0E0E6"
 | '''[[Inguz|Ing(uz)]]'''; '''Ingwaz'''
-|| ''Yngvi''
-|| vöärolder v/d [[Ingvaeones]]; god van arvelikheid; vernömen; lücht.
-|| 
-|| Germaanse name vöär Freyr
-|| [[Tacitus]]
-|- style="background:#eeeeee"
+| ''Yngvi''
+| vöärolder v/d [[Ingvaeones]]; god van arvelikheid; vernömen; lücht.
+| 
+| Germaanse name vöär Freyr
+| [[Tacitus]]
+|- style="background-color:#eeeeee"
 | '''[[Istvae]]''' 
-|| 
-|| vöärolder v/d [[Istvaeones]]
-|| 
-|| 
-|| Tacitus
-|- style="background:#B0E0E6"
+| 
+| vöärolder v/d [[Istvaeones]]
+| 
+| 
+| Tacitus
+|- style="background-color:#B0E0E6"
 | '''[[Mannus]]'''
-|| 
-|| Vader van Hirmin, Ing en Istwa
-||
-|| Name beteakend 'mens(heid)'
-|| Tacitus
-|- style="background:#eeeeee"
+| 
+| Vader van Hirmin, Ing en Istwa
+|
+| Name beteakend 'mens(heid)'
+| Tacitus
+|- style="background-color:#eeeeee"
 | '''[[Tuïsto]]''' 
-|| 
-|| oorgod v/d Germanen; vader van Mannuz
-|| 
-|| uut de aerde untstån
-|| Tacitus
-|- style="background:#B0E0E6"
+| 
+| oorgod v/d Germanen; vader van Mannuz
+| 
+| uut de aerde untstån
+| Tacitus
+|- style="background-color:#B0E0E6"
 | '''[[Nerthus]]'''
-||  
-|| ''[[Moder Eerde|Muder Eerde]]''; [[Modergodinne|Mudergodinne]]; vruchtbarheydsgodinne
-|| trükken med paerd en wåge
-|| Later bekend as Friia en/of Ertha
-|| Tacitus
-|- style="background:#eeeeee"
+|  
+| ''[[Moder Eerde|Muder Eerde]]''; [[Modergodinne|Mudergodinne]]; vruchtbarheydsgodinne
+| trükken med paerd en wåge
+| Later bekend as Friia en/of Ertha
+| Tacitus
+|- style="background-color:#eeeeee"
 | '''[[Ostara (godin)|Ostara]]'''; '''Ēostre''' 
-||  
-|| Vrüchtbaarheidsgodinne van de lente en de weargeböörte
-|| Ey, hase
-|| Name verwant an ''ousten'', wår de sünne upkümt
-|| [[Beda]]; Angelsaksische kalender
-|- style="background:#B0E0E6"
+|  
+| Vrüchtbaarheidsgodinne van de lente en de weargeböörte
+| Ey, hase
+| Name verwant an ''ousten'', wår de sünne upkümt
+| [[Beda]]; Angelsaksische kalender
+|- style="background-color:#B0E0E6"
 | '''[[saxnot|Saxnôt]]'''; '''Seaxneat'''
-|| 
-|| stamgod van de Sassen; recht; oorlog; verbund
-|| 
-|| Verwant an Tîw
-|| Oldsassiske dööpbelovte
-|- style="background:#eeeeee"
+| 
+| stamgod van de Sassen; recht; oorlog; verbund
+| 
+| Verwant an Tîw
+| Oldsassiske dööpbelovte
+|- style="background-color:#eeeeee"
 | '''[[Vrouw Holle|Holda]]''' 
-|| ''[[Huldra]]''
-|| Underwerld- en buskgodinne; skeer; lank hår; staert van ko; gedånte wesselen; magy
-|| Wilde Jacht
-|| Folklore uut Skandinavy en [[Westfalen]]; verwant an [[Huld]]
-|| Folklore uut Skandinavy en [[Westfalen]]; Edda
-|- style="background:#B0E0E6"
+| ''[[Huldra]]''
+| Underwerld- en buskgodinne; skeer; lank hår; staert van ko; gedånte wesselen; magy
+| Wilde Jacht
+| Folklore uut Skandinavy en [[Westfalen]]; verwant an [[Huld]]
+| Folklore uut Skandinavy en [[Westfalen]]; Edda
+|- style="background-color:#B0E0E6"
 | '''[[Tanfana]]'''
-||  
-|| 
-|| 
-|| Godinne van Istvaeonen, stam v/d [[Marsi]]
-|| archeologie
-|- style="background:#eeeeee"
+|  
+| 
+| 
+| Godinne van Istvaeonen, stam v/d [[Marsi]]
+| archeologie
+|- style="background-color:#eeeeee"
 | '''[[Hretha]]'''
-||  
-|| 
-|| 
-|| name beteakend ''de bekenden'', ''de segeverenden''
-|| [[Angelsaksische kalender]]
-|- style="background:#B0E0E6"
+|  
+| 
+| 
+| name beteakend ''de bekenden'', ''de segeverenden''
+| [[Angelsaksische kalender]]
+|- style="background-color:#B0E0E6"
 | '''[[Balder]]'''; '''Baldaeg'''
-|| ''Baldr''
-|| 
-|| 
-||
-|| Beda; Edda; Mersebürger töverspröäken
-|- style="background:#eeeeee"
+| ''Baldr''
+| 
+| 
+|
+| Beda; Edda; Mersebürger töverspröäken
+|- style="background-color:#eeeeee"
 |'''Frigga'''
-|| ''Frigg''
-||  
-||
-|| moder v/d goden
-|| Beda; Edda
-|- style="background:#B0E0E6"
+| ''Frigg''
+|  
+|
+| moder v/d goden
+| Beda; Edda
+|- style="background-color:#B0E0E6"
 | '''Fro'''; '''Frea'''
-|| ''Freyr''
-|| [[fallussymbool]] van de keerls
-||
-|| vörend op een eaverswyn
-|| Edda; volksvertelligys
-|- style="background:#eeeeee"
+| ''Freyr''
+| [[fallussymbool]] van de keerls
+|
+| vörend op een eaverswyn
+| Edda; volksvertelligys
+|- style="background-color:#eeeeee"
 | '''Frîia'''; '''Freo'''; '''[[Frieja]]'''
-|| ''Freya''
-|| Vrouwelike seksualiteit
-|| 
-|| verwant an Ostara
-|| Mersebürger töverspröäken
-|- style="background:#B0E0E6"
+| ''Freya''
+| Vrouwelike seksualiteit
+| 
+| verwant an Ostara
+| Mersebürger töverspröäken
+|- style="background-color:#B0E0E6"
 | '''Ziu'''; '''Tîw'''; '''Thingsus'''
-|| ''Týr'' 
-|| Rechtvårdigheid; orde
-|| 
-|| god van et [[Thing]]
-|| archeology
-|- style="background:#eeeeee"
+| ''Týr'' 
+| Rechtvårdigheid; orde
+| 
+| god van et [[Thing]]
+| archeology
+|- style="background-color:#eeeeee"
 | '''Heimdal'''; '''Heime'''
-|| ''Heimdallr''
-|| brüggewaker teagen de rösen
-|| [[Gjallarhoorn|Gelehoorn]]
-|| söt overdag en nachts 100 myl; Höyrt grös en wulle grööyen;
-|| Mersebürger töversprökken; Edda
-|- style="background:#B0E0E6"
+| ''Heimdallr''
+| brüggewaker teagen de rösen
+| [[Gjallarhoorn|Gelehoorn]]
+| söt overdag en nachts 100 myl; Höyrt grös en wulle grööyen;
+| Mersebürger töversprökken; Edda
+|- style="background-color:#B0E0E6"
 | '''Sunna'''; '''Sigel'''
-|| ''Sól''
-|| sünnegodinne; 
-||
-|| [[Zonnestrijdwagen van Trundholm|paerd en wåge]] vörend rund Midgaard; achternå eseaten döär [[Helhond|Hellehund]]
-|| Mersebürger töverspröäken
-|- style="background:#eeeeee"
+| ''Sól''
+| sünnegodinne; 
+|
+| [[Zonnestrijdwagen van Trundholm|paerd en wåge]] vörend rund Midgaard; achternå eseaten döär [[Helhond|Hellehund]]
+| Mersebürger töverspröäken
+|- style="background-color:#eeeeee"
 | '''(H)Ertha'''
-|| ''Jörd'' 
-|| [[Terra Mater|Eerdegodinne]]
-||
-|| Verwant an [[Gaia]]
-|| Beda
-|- style="background:#B0E0E6"
+| ''Jörd'' 
+| [[Terra Mater|Eerdegodinne]]
+|
+| Verwant an [[Gaia]]
+| Beda
+|- style="background-color:#B0E0E6"
 | '''[[Nehalennia (godin)|Nehalennia]]'''
-|| 
-|| beskarmgodinne vöär seelüde en handelaars
-|| Hund, vrüchten, lank gewåd, Skelpdak van de altaarnisse, bloomslingers
-|| West-Germaanse godinne uut 2e en 3e ewe nå Chr.
-|| archeology
+| 
+| beskarmgodinne vöär seelüde en handelaars
+| Hund, vrüchten, lank gewåd, Skelpdak van de altaarnisse, bloomslingers
+| West-Germaanse godinne uut 2e en 3e ewe nå Chr.
+| archeology
 |}
 
 {{Dialekt|sdz|[[Vechte|t Vechtdal]]|Algemene Nedersaksiese Schriefwieze}}
