--- a/Maarkel.mw
+++ b/Maarkel.mw
@@ -49,7 +49,7 @@ De Maarkelsen beent meestieds behooldnd protestaants. in t midln van t doarp ste
 * [[Johan Nijenhuis]] (4 maart 1968), geboorn in Maarkel en Neerlaands filmregisseur
 * [[Erik Wevers]] (24 maart 1970), op egröaid en wont in Maarkel, is Neerlaands Rallycoureur en teameigenaar
 * [[Jeroen Biegstraaten]] (25 juli 1973), geboorn in Maarkel en Neerlaands akteur
-* [[Bakermat]] (8 oktober 1991), geboorn in Maarkel en Neerlaands DJ
+* [[Bakermat]] (8 oktober 1991), geboorn in Maarkel en Neerlaands DJ en muziekproducent
 * [[Gerard Bakker]], Elvis Bode in [[Van Jonge Leu en Oale Groond]]
 
 == Rifferenties ==
