/* Geskiedenis */Type fout gecorrigeerd

--- a/TT_Assen.mw
+++ b/TT_Assen.mw
@@ -4,7 +4,7 @@ Den '''TT Assen''' is nen joarleksen [[Motorsport|motorrace]] op t [[TT-Circuit 
 
 Veurafgoand an den TT bunt der een paar trainingsdage en kwalificatieraces veur goeie startposities. In de wekke veurofgoand an den TT is der in Assen de zogeneumde ''SPEEDWEEK''. In disse wekke bunt der de verskeidene kanten van de motorsport te zeen. Ok bunt der ne [[karmisse]] en t TT-festival te bezeuken. 
 
-== Geschiedenis ==
+== Geskiedenis ==
 [[Ofbeelding:Tt assen spectators.jpg|right|thumb|300px|Drokken bi'j den TT van Assen in 2007 (Stekkenwaltribune)]]
 Den eersten race wodden organiseerd deur '[[Motorclub Assen en Omstreken]]' op [[11 juli]] [[1925]] oaver n parkoers met ne lengte van 28,4 kilometer. Neet oaver n glad estrekken [[circuit (sport)|circuit]], moar over klinkerweage tussen [[Dreanthe|Dreantse]] darpen. In dissen eersten race was der zelfs n stuk onverharde weg in t trajekt op-enomen. De route leep oaver [[Borger (Nederland)|Borger]], [[Schoonloo]] en [[Grolloo]]. Dissen eersten race wodden ewonnen deur [[Piet van Wijngaarden]] op nen 500 cc [[Norton (motorfietse)|Norton]] met ne gemiddelde snelheid van 91,4 kilometer per uur.
 
