*Empty MediaWiki Message*

--- a/Boaden-Wurttembaarg.mw
+++ b/Boaden-Wurttembaarg.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Deutschland Lage von Baden-Württemberg.svg|thumb|250px|Liggen]]
-[[Ofbeelding:Grosses Landeswappen Baden-Wuerttemberg.png|thumb|250px|Woapen]]
+[[Ofbeelding:Greater coat of arms of Baden-Württemberg.svg|thumb|250px|Woapen]]
 '''Boaden-Wurttembaarg''' ([[Duuts]]: ''Baden-Württemberg'') is n [[dailstoat]] in t zuudwesten van [[Duutslaand]]. De dailstoat het n [[oppervlakte]] van 35.750 [[vierkaante kilometer|km²]] en 10.692.000 inwoner. De [[heufdstad]] is [[Stuttgart]]. Boaden-Wurttembaarg ligt tussen [[Zwitserlaand]] in t zuden, de [[Main]] in t noorden, Bayern in t oosten en [[Elsas]] in t westen. De grootste [[rivier]] is de [[Rien|Rhain]]. n Beroemd gebied in Boaden-Wurttembaarg is t [[Zwaarte-Wold]].
 
 == Bestuurleke indailen ==
