*Empty MediaWiki Message*

--- a/Fenrir.mw
+++ b/Fenrir.mw
@@ -1,3 +1,6 @@
 '''Fenrir''' ([[oldnoorsk]]: "veanganger") '''Fenries''' of '''Fenrisúlfr''' (oldnoorsk: "Fenrirswulv"), ouk wal '''Hróðvitnir''' en '''Vánagandr''' (monster van de Vánrivyr) enöömd, is nen grouten [[wulv]] in de [[Germaanse mythologie|germaanske mytology]]. Med [[Hel]] en de [[wearldslange]] is Fenrir en kind van stoakegud [[Loki]] en de röäsinne [[Angrboða]]. Hee steyt beskreaven in de [[Edda|dichtedda]], daleskreaven in de 13. eywe uut eyrdere mundelinge brunnen, en de verhaaledda en ''Heimskringla'', van den [[Ieslaand|yslandsken]] skryver [[Snorri Sturluson]]. In beide edda's is Fenrir de vader van de wulven Sköll en Hati Hróðvitnisson. Van Fenrir is vöärsegd dat hee den gud [[Wodan]] sal upvreaten by [[Ragnarök]] en dårvöär döär Wodan synen söäne [[Viðarr]] ümmebracht sal worden.
 
 In de verhaaledda steyt beskreaven dat de guden de vöärspellingen oaver Fenrirs tokumstige rulle höyrt. Ouk seet se em rap grötter groien en sint der niks geröste up. Dårümme oaverlegt se med den gud Týr (Dinksel) dat hee an de keatene müt. Den krigt dat vöär mekander, mär Fenrir bit em wal de hande af.
+
+[[Kategorie: Tweants artikel]]
+[[Kategorie: Germaanse mythologie]]
