Sortering van [[:Kategorie:Webstee]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Websteade.mw
+++ b/Websteade.mw
@@ -8,4 +8,4 @@ De meyste websteaden hebben en eigen domainname. [[Wikipedia]] hevt byvöärbeal
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
-[[Kategorie:Webstee]]
+[[Kategorie:Webstee| ]]
