--- a/Botswana.mw
+++ b/Botswana.mw
@@ -3,7 +3,7 @@
 |naam-nds= Botswana
 |vlagge= Flag_of_Botswana.svg
 |naam= Botswana
-|woapn= Coat_of_arms_of_Botswana_(Official).svg
+|woapn= Coat of arms of Botswana.svg
 |lokasie= LocationBotswana.svg
 |sproaken= [[engelsk]], [[setswana]], [[kalanga]]
 |heufdstad= [[Gaborone]]
@@ -22,7 +22,7 @@
 |valutakode= BWP
 |tiedzone= GMT+2 (CAT)
 |feestdag=
-|tld= .bw
+|tld= bw
 |laandkode= BW
 |tel= +267
 |webstea=
