*Empty MediaWiki Message*

--- a/Fresen.mw
+++ b/Fresen.mw
@@ -52,4 +52,4 @@ De fresen uut west, oust un noord hebben sik to de [[Fresenraad|Interfreeske Raa
 
 {{Dialekt|frs||Nysassiske Skryvwyse}}
 
-[[Kategorie:Germanen]]
+[[Kategorie:Germoans vôk]]
