*Empty MediaWiki Message*

--- a/Fresen.mw
+++ b/Fresen.mw
@@ -28,7 +28,7 @@ Mennig kontreien, dee in eyrder tyden freesk wassen, worden vandage neet meyr to
 == Politik ==
 De freeske volksgrup stelt tohoup mid de däänske un [[Sorben|sorbske]] minderheiden un de in Düütskland leavend [[Sinti]] un [[Roma]] de anerkend nationaal minderheiden, dee dat in de bundsrepublik Düütskland givt. De van dat gesäts in Sleeswyk-Holsteyn anerkennde minderheidenparty van de dänen, de Süüdsleeswykske Wälerverband (SSW), warkt mid de Nationale Fresen in Noordfreesland tosamen. Sou kumt dat, dat de SSW sik ouk vöär de freeske belang insetten deit. In Neaderland givt dat al syd jåren de Fryske Nasjonale Partij un syd 2006 de party DeFriezen. In Oustfreesland besteit syd jungerde tyden de streakparty [[De Fresen]].
 
-De fresen uut west, oust un noord hebben sik to de [[Fresenraad|Interfreeske Raad]] tosamensloaten.
+De fresen uut west, oust un noord hebben sik to de [[Fresenråd|Interfreeske Råd]] tosamensloaten.
 
 == Hertogen van Freesland ==
 
