--- a/Ni'je_Hanze_Interregio.mw
+++ b/Ni'je_Hanze_Interregio.mw
@@ -5,7 +5,7 @@ De '''Ni'je Hanze Interregio''' ('''NHI''') is een economisch, wetenskoppelijk, 
 De NHI wil inspeulen op de kaansen die as 't ni'je 'Europa zonder grèenzen' biedt veur grèensoavertredende samenwarking. De mandielige belangen van de NHI-regio mut 't bondgenootskop anwiezen. Binnen de NHI bestiet een netwark van relaoties. 't Verbaand gef bi'jienkomsten, dut analyses en ondersteunt projecten, beveurbield op 't gebied van energie en infrastructuur.
 
 ==Projecten==
-D'r is een Europese Juridische opleiding uutewarkt mit de [[Hanse Law School]], een samenwarkingsverbaand maank de universiteiten van [[Bremen]], [[Grunnen (stad)|Grunnen]] en Ollnborg. Naor model van de NHI is 't pregramma ''[[Hanse Passage]]'' op-ezet, det bestiet uut economische samenwarkingsprejecten maank een bulte orgenisaoties in vieftien Noord-Europese regio's van [[Verienigd Keuninkriek|Engelaand]] töt an [[Litouwen]]. In mei 2008 hölden ze in Ollnborg de vakconferentie ''Op weg hen íen Europese energieregio: Perspectieven veur Nederlaans-Duutse samenwarking op 't gebied van energie binnen de Ni'je Hanze Interregio.
+D'r is een Europese Juridische opleiding uutewarkt mit de [[Hanse Law School]], een samenwarkingsverbaand maank de universiteiten van [[Bremen]], [[Grunnen (stad)|Grunnen]] en Ollnborg. Naor model van de NHI is 't pregramma ''[[Hanse Passage]]'' op-ezet, det bestiet uut economische samenwarkingsprejecten maank een bulte orgenisaoties in vieftien Noord-Europese regio's van [[Verienigd Keuninkriek|Engelaand]] töt an [[Litouwen]]. In mei 2008 hölden ze in Ollnborg de vakconferentie ''Op weg hen íen Europese energieregio: Perspectieven veur Nederlaans-Duutse samenwarking op 't gebied van energie binnen de Ni'je Hanze Interregio''.
 
 ==Bron==
 *[http://www.nhi-online.de/ Webstee van de Ni'je Hanze Interregio]
