--- a/Nedersaksisch_O.mw
+++ b/Nedersaksisch_O.mw
@@ -3,7 +3,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit O begunt''' oet 't [[Neders
 ==Oma==
 {{Nds/oma}}
 
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''oepoe''
 
 == Ongespannen ==
@@ -99,9 +99,9 @@ Bijvoorbeeld van touw.
 *[[Drèents]]:
 **''oom''
 **''ome'' ([[ZWN]], [[ZWZ]])
-**''Töt in de twintigste eeuw kwaamp ''oom'' achter de name: Rieksoom. De mansname mit meervold ''ooms'' beduudden de oom en de vrouwe: Jansooms = Jansoom en vrouwe.
+**Töt in de twintigste eeuw kwaamp ''oom'' achter de name: Rieksoom. De mansname mit meervold ''ooms'' beduudden de oom en de vrouwe: Jansooms = Jansoom en vrouwe.
 *[[Grönnegs]]: ''oom'' (voak ien verklainwoord ''oompie'' of ''omke''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''oom(e)''
 **'' 'Jan-ome' ''
 **Vrogger ook om: Wims-om
@@ -154,7 +154,7 @@ Bijvoorbeeld van touw.
 **''oververzadigd''
 
 * [[Achterhoeks]]: ''stiepeldikke''
-*''[[Sallaans]]:
+* [[Sallaans]]:
 **''de ballig rond hebbn'' 
 * [[Grönnegs]]: ''slichtzat''
 * [[Tweants]]: 
