--- a/Henk_Nijkeuter.mw
+++ b/Henk_Nijkeuter.mw
@@ -19,25 +19,24 @@ Ien 1996 publiceerden Nijkeuter bi'j Van Gorcum een wetenskoppelijke biografie v
 
 Mit de taalkundige [[Henk Bloemhoff]] skreef e ''Taal in stad en land. Drents'' (Sdu Uitgevers, 2004). Een jaor later verzörgden hi'j ''De dichter en de wichter. Verzamelde gedichten van [[Hans Heyting]]'' (Het Drentse Boek). Ien 2006 verskien bi'j Het Drentse Boek ''Wilde Jacht. Volksvertellingen uit het oude molenhuis'' van de skriefster [[J.H. Bergmans-Beins]] (1879-1948), verantwoord en ieneleid deur Nijkeuter. Ien 't zölfde jaor publiceerden e ''De 100 mooiste Drentse gedichten'' (Kleine Uil, Grunning). Sund 2002 skrif e oaver Drèentse skrieveri'je ien 't [[Dagblad van het Noorden]]. Van hum is de bi'jdrage 'Streektaal in de Drentse literatuur' in 't ''Handboek Nedersaksische Taal- en Letterkunde'' (Van Gorcum, 2008).
 
-Henk Nijkeuter hef gedichten epubliceerd ien 't Drents Letterkundig Tiedschrift [[Roet (tiedschrift)|Roet]], 't Maondblad in de Drentse Taol [[Oeze Volk]] en de [[Drentse Courant]]. Drentse Taol skrif: ''"Het schrieven van gedichten in het Drèents is veur hum een middel um zien emoties zo direct meugelk under woorden te brengen."
+Henk Nijkeuter hef gedichten epubliceerd ien 't Drents Letterkundig Tiedschrift [[Roet (tiedschrift)|Roet]], 't Maondblad in de Drentse Taol [[Oeze Volk]] en de [[Drentse Courant]]. Drentse Taol skrif: ''"Het schrieven van gedichten in het Drèents is veur hum een middel um zien emoties zo direct meugelk under woorden te brengen."''
 
 ==Bronnen==
-
 * [http://www.encyclopediedrenthe.nl/Nijkeuter,%20Hendrik%20(Henk) Encyclopedie Drenthe Online]
 * [http://www.drentsetaol.nl/schrieverij/schrievers/henk_nijkeuter.htm Stok van Drentse Taol oaver Nijkeuter, mit zien gedicht ''Kruuspunt'']
 * Bloemhoff, Henk, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum
 * [[Rouke Broersma|Broersma, Rouke]] (red.) (2003), ''Scheupers van de taol: Bloemlezing van de Drèentse Schrieverij 1837-2003'', Zuudwolde: Het Drentse Boek (p.217-219)
 
 ==Uutgaonde verwiezings==
-
 * [http://irs.ub.rug.nl/ppn/224242644 Dr. Hendrik Nijkeuter zien proefskrift ''De "pen gewijd aan Drenthe's dierbren grond". Literaire bedrijvigheid in de Olde Lantschap, 1816-1956'', online ien PDF]
 * [http://www.encyclopediedrenthe.nl/ De Encyclopedie Drenthe Online, daoras Nijkeuter mit de redactie van edaon hef]
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
-[[Kategorie:Drèents artikel|Nijkeuter, Hendrik]]
-[[Kategorie:Schriever in 't Drèents|Nijkeuter, Hendrik]]
-[[Kategorie:Historikus|Nijkeuter, Hendrik]]
-[[Kategorie:Nedersaksiese schrieveri'je|Nijkeuter, Hendrik]]
-[[Kategorie:Geschiedenis van Drenthe|Nijkeuter, Hendrik]]
-[[Kategorie:Taolkundige|Nijkeuter, Hendrik]]
+{{DEFAULTSORT:Nijkeuter, Hendrik}}
+[[Kategorie:Drèents artikel]]
+[[Kategorie:Schriever in 't Drèents]]
+[[Kategorie:Historikus]]
+[[Kategorie:Nedersaksiese schrieveri'je]]
+[[Kategorie:Geschiedenis van Drenthe]]
+[[Kategorie:Taolkundige]]
