--- a/Selterfrais.mw
+++ b/Selterfrais.mw
@@ -9,7 +9,7 @@ t Selterfrais is ook verwaant aan t [[Grunnegs]]. t Het vrouger tot dezulfde toa
 
 == Veurbeelden ==
 '''1''' ''Seeltersk is ne Wäästgermaniske Sproake, ju fon sowät 2.200 Moanskene boald wäd in Seelterlound in dät Wääste fon Ooldenbuurich (Niedersachsen), sun 50 km uur dät holloundske Scheed bi Näischans.''<br />
-[[Oldgrunnegs]]: ''Saelterlountsk is eene Westgermanske sprak, deij duer sirkom 2.200 meensken snakt wuert inde Saelterlount inde daet waest vun Oldenborch (Laegsaxen), zo eene 50 km oor daet hollountske scheeden bi Neijschanse. <br /><br />
+[[Oldgrunnegs]]: ''Saelterlountsk is eene Westgermanske sprak, deij duer sirkom 2.200 meensken snakt wuert inde Saelterlount inde daet waest vun Oldenborch (Laegsaxen), zo eene 50 km oor daet hollountske scheeden bi Neijschanse.'' <br /><br />
 '''2''' Selterfrais:'' Die Wänt strookede dät Wucht uum ju Keeuwe un oapede hier ap do Sooken.''<br />
 [[Grunnegs|Oldgrunnegs]]: ''Der Jung strookde daet Wicht umme keeuw to unde tuutjede ier up Zeuken'' <br />
 [[Grunnegs|Nijgrunnegs]]: ''t Jong fleerde t wicht om kinne tou en tuutjede heur op wangen'' <br />
