--- a/Tonko_Ufkes.mw
+++ b/Tonko_Ufkes.mw
@@ -34,7 +34,7 @@ Uut 'Stevels', verhoal ien ''n tuut op beide schelpen''
 * ''n Tuut op beide schelpen'' (verhoalen) (Het Drentse Boek, Beilen, 2015)
 * ''Ongeliek'' (verhoalen) (Het Nieuwe Kanaal, Liwwadden, 2018)
 * ''Boeten, nog niet binnen'' (gedichten) (Stichting 't Grunneger Bouk, Scheemde, 2019)
-* ''De weg dreumen'' (verhalen) (Het Drentse Boek, 2021)
+* ''De weg dreumen'' (verhalen) (Het Drentse Boek, Beilen, 2021)
 
 ==Wellen==
 *[http://www.mienwesterkwartier.nl/toaltied/schrievers/244-tonko-ufkes Ufkes op Mien Westerkwartier]
