--- a/Martin_Koster.mw
+++ b/Martin_Koster.mw
@@ -1,4 +1,4 @@
-'''Martin Gert Koster''' ([[De Vaort (plaatse)|De Vaort]], [[1950]]) is een [[Drèents]]talige skriever en ien van de oprichters van 't Drèentse literaire tiedskrift ''[[Roet (tiedschrift)|Roet]]''. Hi'j stiet bekend as een polemische, skaarpe skriever die de confrontatie niet uut de weg giet.
+'''Martin Gert Koster''' ([[De Vaort (plaatse)|De Vaort]], [[1950]]) is een [[Drèents]]talige skriever en ien van de oprichters van 't Drèentse literaire tiedskrift ''[[Roet (tiedschrift)|Roet]]''. Hi'j stiet bekend as een polemische, skaarpe skriever die de confrontatie niet uut de weg giet. In 2021 wördden e benuumd töt [[Ridder in de Örder van Oranje-Nassau]] veur zien in de weer wezen veur 't Drèents.<ref>[https://www.huusvandetaol.nl/nieuws/martin-koster-is-nou-ridder-in-de-orde-van-oranje-nassau/ Huus van de Taol: 'Martin Koster is nou Ridder in de Orde van Oranje-Nassau']</ref><ref>[https://rtvzulthe.nl/martin-koster-dichter-en-boegbeel1d-van-het-nedersaksisch-benoemd-tot-ridder-in-de-orde-van-oranje-nassau-bij-geliefd-vasalis-monument/ RTV Zulthe: 'Martin Koster, dichter en boegbeeld van het Nedersaksisch, benoemd tot Ridder in de Orde van Oranje-Nassau bij geliefd Vasalis-monument' (26 april 2021)]</ref>
 
 ==Opgruuien en wark as leraar==
 De femilie van zien va huusden de leste twei ieuwen langs [[Riest (revier)|Riest]] en [[De Vaort (plaatse)|Vaort]]. De femilie van zien moe kwamen end [[19e eeuw|19e ieuw]] as [[asielzuker|asielzukers]] uut 't [[Keuninkriek Hannover]] naor [[Roswinkel]] ([[Drenthe]]).<ref name="Koster2010" /> Koster zölf gruuide an De Vaort op.
