--- a/Šiprage.mw
+++ b/Šiprage.mw
@@ -1,4 +1,4 @@
-'''Šiprage''' ([[bosnisk]], [[kroatisk]] en [[servisk]]: Šiprage; Cyrillisk skrift: Шипраге), is en gemeynschop in [[Bosnië-Herzegovina]].<ref>http://www.kartabih.com/</ref><ref>Vojnogeografski institut, Ed. (1962): Šiprage (List karte 1:25.000, Izohipse na 10 m). Vojnogeografski institut, Beograd / Military Geographical Institute, Ed. (1962): Šiprage (map sheet 1: 25.000, Contour lines at 10 m). Military Geographical Institute, Belgrade.</ref> De gemeynschop lig in de gemeynde [[Kotor Varoš]] en had in [[2013]] 788 inwoaners. In [[1991]] had et nog 952 inwoaners. De plaatse lig in de [[Serviske Republyk]].
+'''Šiprage''' ([[bosnisk]], [[kroatisk]] en [[servisk]]: Šiprage; Cyrillisk skrift: Шипраге), is en gemeynskop in [[Bosnië-Herzegovina]].<ref>http://www.kartabih.com/</ref><ref>Vojnogeografski institut, Ed. (1962): Šiprage (List karte 1:25.000, Izohipse na 10 m). Vojnogeografski institut, Beograd / Military Geographical Institute, Ed. (1962): Šiprage (map sheet 1: 25.000, Contour lines at 10 m). Military Geographical Institute, Belgrade.</ref> De gemeynskop lig in de gemeynde [[Kotor Varoš]] en had in [[2013]] 788 inwoaners. In [[1991]] had et nog 952 inwoaners. De plaatse lig in de [[Serviske Republyk]].
 
 == Klimaat<ref>https://en.climate-data.org/location/905786/</ref> ==
 {| class="wikitable" style="text-align: center;"
