*Empty MediaWiki Message*

--- a/Šiprage.mw
+++ b/Šiprage.mw
@@ -1,13 +1,13 @@
-'''Šiprage''' ([[bosnisk]], [[kroatisk]] en [[servisk]]: Šiprage; Cyrillisk skrift: Шипраге), is en gemeynskop in [[Bosnië-Herzegovina]].<ref>http://www.kartabih.com/</ref><ref>Vojnogeografski institut, Ed. (1962): Šiprage (List karte 1:25.000, Izohipse na 10 m). Vojnogeografski institut, Beograd / Military Geographical Institute, Ed. (1962): Šiprage (map sheet 1: 25.000, Contour lines at 10 m). Military Geographical Institute, Belgrade.</ref> De gemeynskop lig in de gemeynde [[Kotor Varoš]] en had in [[2013]] 788 inwoaners. In [[1991]] had et nog 952 inwoaners. De plaatse lig in de [[Serviske Republyk]].
+'''Šiprage''' ([[bosnisk]], [[kroatisk]] en [[servisk]]: ''Šiprage''; [[kyrillisk skrivt]]: ''Шипраге''), is en gemeynskop in [[Bosnië-Herzegovina|Bosnie-Hercegovina]].<ref>http://www.kartabih.com/</ref><ref>Vojnogeografski institut, Ed. (1962): Šiprage (List karte 1:25.000, Izohipse na 10 m). Vojnogeografski institut, Beograd / Military Geographical Institute, Ed. (1962): Šiprage (map sheet 1: 25.000, Contour lines at 10 m). Military Geographical Institute, Belgrade.</ref> De gemeynskop ligt in de gemeynde [[Kotor Varoš]] en had in [[2013]] 788 inwoaners. In [[1991]] had et noch 952 inwoaners. De plaatse ligt in de [[Servië|Serviske Republyk]].
 
 == Klimaat<ref>https://en.climate-data.org/location/905786/</ref> ==
 {| class="wikitable" style="text-align: center;"
 |-
 ! rowspan="2" | Månd
-! colspan="3" | Temperatüür (°C)
+! colspan="3" | Temperatuur (°C)
 ! rowspan="2" | Neyrslag<br />(mm)
 |-
-! Mediaan !! Minimum !! Maximum
+! Mediaan !! Minimum !! Maksimum
 |-
 | style="text-align: left;" | Januari
 | −1,7
@@ -75,7 +75,7 @@
 |7,8
 |100
 |-
-| style="text-align: left;" | Desember
+| style="text-align: left;" | December
 |0,1
 |−2,7
 |3,0
@@ -84,7 +84,8 @@
 
 ==Verwysings==
 <references/>
-==Websteas==
+
+==Websteades==
 {{Commonscat|Šiprage}}
 * http://opstinakotorvaros.com/ 
 *http://www.maplandia.com/bosnia-and-herzegovina/republika-srpska/siprage/ Maplandia
@@ -94,5 +95,6 @@
 *http://www.satellitecitymaps.com/europe-map/bosnia-and-herzegovina-map/federation-of-bosnia-and-herzegovina-map/%C5%A1iprage-map/
 *http://www.distancesfrom.com/distance-from-Siprage-to-Banja-Luka-Bosna-i-Hercegovina/DistanceHistory/5243320.aspx
 *http://www.udaljenosti.com/bosna/- Distances in B&H
+
 {{Dialekt|sdz}}
 [[Kategorie:Bosnië-Herzegovina]]
