--- a/Na-Denétalen.mw
+++ b/Na-Denétalen.mw
@@ -5,17 +5,16 @@ De Na-Denétalen kuj verdielen in twee subfamilies. De eerste bestiet uut mar ie
 
 Een biester umstreden theorie van de Rus [[Sergei Starostin]] wil det de Na-Denétalen mit onder aandere de [[Noord-Kaukasische talen]], de [[Sino-Tibetaanse talen]] en zölfs 't [[Baskisk|Baskisch]] onder de [[Dené-Kaukasische talen|Dené-Kaukasische taalfamilie]] vaalt. De aovergrote meerderheid van de taalkundigen wis dizze hypothese van de haand.
 
-Det de Na-Denétalen kunnigheid hebt an de [[Jenisejische talen]] uut [[Siberië]] is wal annemelijk. In 2008 concludeerden de belangriekste kenners van de Na-Dené- en Jenisejische taalfamilies det Na-Dené en Jenisejisch mit mekare de [[Dené-Jenisejische talen|Dené-Jenisejische]] familie vörmt.<ref>[https://uaf.edu/anlc/docs/dy2008summary.pdf ''Linguists demonstrate Siberian-North American link]'' Dene-Yeniseic Symposium, 26, 27 en 29 febrewaori 2008, Fairbanks en Anchorage, Alaska.</ref> DNA-onderzuuk wis naor een verbaand mit de komst van de [[Paleo-Eskimo's]] uut Siberië.
+Det de Na-Denétalen kunnigheid hebt an de [[Jenisejische talen]] uut [[Siberië]] is wal annemelijk. In 2008 concludeerden de belangriekste kenners van de Na-Dené- en Jenisejische taalfamilies det Na-Dené en Jenisejisch mit mekare de [[Dené-Jenisejische talen|Dené-Jenisejische]] familie vörmt.<ref>[https://uaf.edu/anlc/docs/dy2008summary.pdf ''Linguists demonstrate Siberian-North American link''] Dene-Yeniseic Symposium, 26, 27 en 29 febrewaori 2008, Fairbanks en Anchorage, Alaska.</ref> DNA-onderzuuk wis naor een verbaand mit de komst van de [[Paleo-Eskimo's]] uut Siberië.
 
 De Na-Denétaalfamilie vörmt mit de [[Algische talen|Algische]] en de [[Uto-Azteekse]] taalfamilies iene van de drei grote taalfamilies van [[Noord-Amerika]]. Een bulte van de Na-Denétalen bint daorumme ok hiel best bestudeerd.
 
 [[Michael Krauss]] is een Amerikaans taalkundige die de Na-Denétalen briedvoerig bestudeerd hef.
 
 == Rifferenties ==
-<references>
-</references>
+<references/>
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Drèents]].}}
 
 [[Kategorie:Drèents_artikel]]
-[[Kategorie:Na-Denétaalfamilie]]
+[[Kategorie:Na-Denétaalfamilie| ]]
