--- a/Louisiana.mw
+++ b/Louisiana.mw
@@ -1,24 +1,17 @@
 {{Zie dv|Zie [[Louisiana (duurverwiesziede)]] vuur aandere betekenissen van Louisiana.}}
 {{Amerikaanse staot
 | naam = Louisiana
-| biejnoam = ''Pelican State''
-* ''Bayou State''
-* ''Child of the Mississippi''
-* ''Creole State''
-* ''Sportsman's Paradise''
-* ''Sugar State''
-* ''État de Louisiane'' ([[Fraansk]])
-* ''Léta de la Lwizyàn'' ([[Kajun Fraansk]])
-| vlagge = [[Ofbeelding:Flag of Louisiana.svg|125x100px|Vlagge van Louisiana]]
+| biejnoam = ''Pelican State<br>Bayou State<br>Child of the Mississippi<br>Creole State<br>Sportsman's Paradise<br>Sugar State<br>État de Louisiane'' ([[Fraansk]])<br>''Léta de la Lwizyàn'' ([[Kajun Fraansk]])
+| vlagge = [[Ofbeelding:Flag of Louisiana.svg|125x100px|border|Vlagge van Louisiana]]
 | wapen = [[Ofbeelding:Seal of Louisiana.svg|110x100px|Wapen van Louisiana]]
 | kaorte = Map of USA LA.svg
 | heufstad = [[Baton Rouge]]
-| toe-etrejen = 30 april, [[1812]]
+| toe-etrejen = 30 april [[1812]]
 | oppervlak laand = 135.382
 | oppervlak waoter = 15% waoter
 | inwoeners = 4.410.796 (2008)
 | dichtheid = 39,61
-| tiedzone = Central ([[UTC]]-6/-5)
+| tiedzone = Central ([[UTC]]−6/−5)
 | antal graafschappen = 
 | ofkorting = LA
 }}
