--- a/Schoeltied_(roman).mw
+++ b/Schoeltied_(roman).mw
@@ -17,10 +17,10 @@ De verschillende personen bint ok met mekaor in discussie over hun kiek op hoe m
 Koops sned verschillende problemen van de dörpssaomenleving an, zoas latent racisme en homohaat van volk dat wieder gien poletieke kleur duurt te bekennen. Naost 't anwiezen van intolerant conservatisme is er ok de weerzin tegen 't vortsmieten van de mooie kaanten van een dörpie, zoas de ofbraok van de schilderachtige umgeving deur neibouwwieken.
 
 ==Citaot==
-:''As ze net de eerste kwast vol varf op de deur oetstreken hef giet de bel. Ze kek naor de veurdeur en zöt deur het roetie het gezicht van Riekus Oosting. Ze vrag zuch of wat die bij heur an de deur doen komp. Anna zet de varfpot op taofel en lop met de kwast in de haand hen de deur.
-:'' 'Moi. Zo, bi'j an 't vaarven?'
-:'' 'Ja', zeg Anna körtof. 'Zeg 't ies.'
-:'' 'Ik dèenk daj 't wel al heurd hebt, umdaj ok twei kinder op schoel hebt, maor meester Jalvingh is al twei weken ziek in hoes. [...] Umdaw as olders van de kinder die bij Jalvingh in de klas zit toch wel met hum te doen hebt wil wij hum nou geern een hart under de riem steken. Daorum zaomel wij in 't dörp handtiekens in en die wil wij hum dan anbieden in combinatie met een grote bos bloemen. Zuj ok je handtieken zetten willen op dizze liest?'
+:''As ze net de eerste kwast vol varf op de deur oetstreken hef giet de bel. Ze kek naor de veurdeur en zöt deur het roetie het gezicht van Riekus Oosting. Ze vrag zuch of wat die bij heur an de deur doen komp. Anna zet de varfpot op taofel en lop met de kwast in de haand hen de deur.''
+:'' 'Moi. Zo, bi'j an 't vaarven?' ''
+:'' 'Ja', zeg Anna körtof. 'Zeg 't ies.' ''
+:'' 'Ik dèenk daj 't wel al heurd hebt, umdaj ok twei kinder op schoel hebt, maor meester Jalvingh is al twei weken ziek in hoes. [...] Umdaw as olders van de kinder die bij Jalvingh in de klas zit toch wel met hum te doen hebt wil wij hum nou geern een hart under de riem steken. Daorum zaomel wij in 't dörp handtiekens in en die wil wij hum dan anbieden in combinatie met een grote bos bloemen. Zuj ok je handtieken zetten willen op dizze liest?' ''
 :''Anna is te verbluft um vortdaolijk te kunnen reageren. Een handtiekenactie veur een man die ziek in hoes zit, umdat e zien nederlaog niet accepteren kan. Hoe kuj 't bedèenken.''
 
 :Oet ''Schoeltied''
