--- a/Noord-Hollaand.mw
+++ b/Noord-Hollaand.mw
@@ -1,23 +1,23 @@
-{{Provinzietabel |
-noam = Noord-Hollaand|
-vlageofbeelden = [[Bestaand:Flag of North Holland.svg|120px|Perveensievlagge]]|
-woapenofbeelden = [[Bestaand:Wapen van Noord-Holland.svg|90px|Perveensiewaopen]]|
-körtnoam = Noord-Hollaand |
-heufdstad = [[Haarlem]]|
-religiejoar = 1999 |
-breedtegroad = 52/22// |
-lengtegroad = 4/38// |
-region = NL-NH |
-religie = [[Protestantisme]] 10%<br />[[Katholicisme]] 20% |
-opprange = 4.091,76 |
-opp = 2.671,03 |
-woateropp = 1.420,73 |
-inwoners = 2.879.611 |
-doatum = jan 2020 |
-bevolkensdichtte = 1078 |
-volkslaid = [[Ik houd van het groen in je wei|Ik houd van het<br />groen in je wei]]|
-ofbeelden =  Noord Holland-Position.png |
-webstee = [http://www.noordholland.nl www.noordholland.nl] |
+{{Provinzietabel
+| noam = Noord-Hollaand
+| vlageofbeelden = [[Bestaand:Flag of North Holland.svg|120px|border|Perveensievlagge]]
+| woapenofbeelden = [[Bestaand:Wapen van Noord-Holland.svg|90px|Perveensiewaopen]]
+| körtnoam = Noord-Hollaand 
+| heufdstad = [[Haarlem]]
+| religiejoar = 1999 
+| breedtegroad = 52/22// 
+| lengtegroad = 4/38// 
+| region = NL-NH 
+| religie = [[Protestantisme]] 10%<br />[[Katholicisme]] 20% 
+| opprange = 4.091,76 
+| opp = 2.671,03 
+| woateropp = 1.420,73 
+| inwoners = 2.879.611 
+| doatum = jan 2020 
+| bevolkensdichtte = 1078 
+| volkslaid = [[Ik houd van het groen in je wei|Ik houd van het<br />groen in je wei]]
+| ofbeelden =  Noord Holland-Position.png 
+| webstee = [http://www.noordholland.nl/ www.noordholland.nl] 
 }}
 [[Bestaand:Prov-Noord-Holland-OpenTopo.jpg|thumb|Noord-Hollaand]]
 
@@ -64,7 +64,7 @@ In et zuden van et IJ liggen de stedelike gebieden van [[Amsterdam]], [[Haarlem]
 <li>[[Langediek]] (''Langedijk'')
 <li>[[Loaren (Noord-Hollaand)|Laoren]] (''Laren'')
 <li>[[Medemblik]]
-<li>[[Older-Amstel|Oolder-Amstel]] (''Ouder-Amstel'')
+<li>[[Older-Amstel|Oolder-Amstel]] (''Ouder-Amstel'')</ol>
 | <ol start="33">
 <li>[[Oostzaan]]
 <li>[[Opmeer]]
@@ -80,7 +80,7 @@ In et zuden van et IJ liggen de stedelike gebieden van [[Amsterdam]], [[Haarlem]
 <li>[[Wiedemeren]] (''Wijdemeren'')
 <li>[[Wormerlaand]] (''Wormerland'')
 <li>[[Zaandvoort]] (''Zandvoort'')
-<li>[[Zaanstad]] (''Zaanstad'')
+<li>[[Zaanstad]] (''Zaanstad'')</ol>
 |}
 
 == Dialekten ==
