*Empty MediaWiki Message*

--- a/'s-Heerenbarg.mw
+++ b/'s-Heerenbarg.mw
@@ -1,4 +1,4 @@
-''' 's-Heerenbarg''' ([sherənbɛrəχ], [[Nederlands]]:'' 's-Heerenberg'') is ne stad in de gemeente [[Montferland]], in de previnsie [[Gelderland]] in [[Nederland]]. De stad hef um en naobi'j de 8000 inwonners (2003). 's-Heerenbarg steet bekand um t [[carnaval]], baoven de grote rivieren is dit et Mekka van et carnaval. Den optocht (zundags met carnaval) is meer dan de meujte weerd um te bekieken. Met carnaval is 's-Heerenbarg bekand as: Waskupenstad.
+''' 's-Heerenbarg''' ([sherənbɛrəχ],<ref>Uutspraok in 's-Heerenbarg</ref> [[Nederlands]]:'' 's-Heerenberg'') is ne stad in de gemeente [[Montferland]], in de previnsie [[Gelderland]] in [[Nederland]]. De stad hef um en naobi'j de 8000 inwonners (2003). 's-Heerenbarg steet bekand um t [[carnaval]], baoven de grote rivieren is dit et Mekka van et carnaval. Den optocht (zundags met carnaval) is meer dan de meujte weerd um te bekieken. Met carnaval is 's-Heerenbarg bekand as: Waskupenstad.
 
 == Pim Pandoer en de Heks van 's-Heerenberg ==
 
