*Empty MediaWiki Message*

--- a/Aalten.mw
+++ b/Aalten.mw
@@ -18,7 +18,7 @@
 | postkode = 7090-7091, 7095, 7120-7123, 7125-7126
 | webstie = [http://www.aalten.nl www.aalten.nl]
 }}
-'''Aalten''' is ne [[Gemiente (bestuur)|gemeente]] in den [[Achterhook]] in de [[Nederlaand]]se [[previnsie]] [[Gelderlaand]]. t Gemeentewaopen besteet uut een zilverkleurig schild met nen greunen lindeboom. Aalten had op 1 mei 2006 27.426 inwonners en een oppervlak van 97.04 km². 
+'''Aalten''' ([a.ltn̩])is ne [[Gemiente (bestuur)|gemeente]] in den [[Achterhook]] in de [[Nederlaand]]se [[previnsie]] [[Gelderlaand]]. t Gemeentewaopen besteet uut een zilverkleurig schild met nen greunen lindeboom. Aalten had op 1 mei 2006 27.426 inwonners en een oppervlak van 97.04 km². 
 
 == Wonkernen ==
 
