*Empty MediaWiki Message*

--- a/Lunteren.mw
+++ b/Lunteren.mw
@@ -7,7 +7,8 @@ De buurtschappen [[Meulunteren]], [[De Valk]], [[Overwoud]] en [[Nederwoud]] lig
 
 Lunteren is in de zoemermaonden n [[toerisme|toeristiese]] trekpleister, an de raanden van de bossen staon verschillende kämpings. n Bekende toeristiese attraksie is de [[Oud-Lunterse Dag]], die as onderdeel van de Eese [[Heedweek]] jaorliks an t eind van [[augustus]] plaotsviendt. Op disse dag, gaot Lunteren zo'n 100 jaor terug in de tied, en wisselen veul Lunteraonen der daogelikse goed in veur de meer tradisionele boeregrei van de [[Veluwe|West-Veluwe]].
 
-{{Ee}}
+== Uutspraok ==
+Uutspraok in Lunters: [lœntərə] - ongeveer Löntere{{Ee}}
 {{Dialekt|wvel|Lunteren|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Plaotse in Gelderlaand]]
