*Empty MediaWiki Message*

--- a/Niekark.mw
+++ b/Niekark.mw
@@ -20,7 +20,7 @@
 }}
 [[Bestaand:Niekark.jpg|thumb|200px|Kark in Niekark]]
 [[Bestaand:Plaotsnaambord_Niekark.jpg|right|200px]]
-'''Niekark''' ([[Nederlaands|Nederlands]]: ''Nijkerk'') is n stad en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderlaand|Gelderland]]. Niekark staot bie sommige minsen nog de altied bekend as n darp maor t het al sinds [[1413]] [[stadsrechten]].
+'''Niekark''' ([nikɑrək], [[Nederlaands|Nederlands]]: ''Nijkerk'') is n stad en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderlaand|Gelderland]]. Niekark staot bie sommige minsen nog de altied bekend as n darp maor t het al sinds [[1413]] [[stadsrechten]].
 
 De gemeente had op [[1 mei]] [[2014]] roend de 40.618 inwoeners (bron: CBS) en t het n oppervlakte van 72,10&nbsp;km², waorvan 2,62&nbsp;km² [[woater|waoter]]. De gemeente bestaot uut de kernen Niekark, [[Niekarkerveen]] en [[Hoevelaken]], de buurtschappen bin [[Holkerveen]] en [[Driedarp]]. De stad Niekark zelf het oengeveer 27.600 inwoeners. Niekark leit in t westen van de [[Veluwe]] tegen [[Eemland]] an, t is goed te bereiken via de [[A28]] en t spoorlien [[Amersfoort]]-[[Zwolle]].
 
