*Empty MediaWiki Message*

--- a/Weuste_Hoeve.mw
+++ b/Weuste_Hoeve.mw
@@ -12,7 +12,8 @@ Die brand was an-estoken deur n zekere Garrit. Garrit was verliefd op t deerntje
 ==Vorstelik bezuuk==
 In [[1811]] verbleef keizer [[Napoleon Bonaparte]] hier mit [[Marie Louise van Oostenriek|Marie Louise]]. Ok koning [[Willem III van Nederlaand|Willem III]] bezocht de harbarg vaak, op deurreis naor [[paleis t Loo]].
 
-{{Apeldoorne}}
+== Uutspraok ==
+Uutspraok in Weuste Hoeve: [(də) vustə huvə]{{Apeldoorne}}
 {{Dialekt|wvel|Hoenderloo|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Plaotse in Gelderlaand]]
