*Empty MediaWiki Message*

--- a/Luttenbarg.mw
+++ b/Luttenbarg.mw
@@ -29,7 +29,7 @@ Körtbi'j et dörp is er een vri'jetiedspark zo as een camping en een park met v
 Deur et dörp hen löp de laandelike fietsroute 15 Boerenlaandroute. t Dörp is slecht te bereiken met t OV. De bushalte die ast körtste bi'j lig, is op 3,5 km ofstaand, körtbi'j [[Roalte|Raolte]] en [[Lemelerveld]] en in et wekende kump er helemaole geen busse.
 
 ==Mooi um te weten==
-*Luttenbarg trekt jaorliks völle leu uut heel [[Nederlaand]], umdet der tiedens t Luttenbergs Feest t laandelik bekende [[zwientietikken]] edaon wördt.
+*Nao Luttenbarg gaot jaorliks völle leu uut heel [[Nederlaand]] hen, umdet der tiedens t Luttenbergs Feest t laandelik bekende [[zwientietikken]] edaon wördt.
 
 {{Dialekt|sdz}}
 {{Roalte}}
