*Empty MediaWiki Message*

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -5,54 +5,67 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
+!Oetsproak in ploats
 ! width="15%" |Nederlaands
 ! width="15%" |Ienwoner
 |-
 |[[Beem]]
+|[be.m]
 |Bedum
 |Beemster
 |-
 |[[Ellerhoezen]]
+|
 |Ellerhuizen
 |Ellerhoezer
 |-
 |Keunenslege
+|
 |Koningslaagte
 |Keunensleegster
 |-
 |Mìnkeweer
+|
 |Menkeweer
 |Mìnkeweerster
 |-
 |Noordwôlde
+|
 |Noordwolde
 |Noordwôlster
 |-
 |Onderndaam
+|
 |Onderdendam
 |Onderndaamster
 |-
 |Rowôlde
+|
 |Rodewolt
 |Rowôlster
 |-
 |Sunt Annerhoeskes
+|
 |Sint-Annerhuisjes
 |Sunt Annerhoesker
 |-
 |Ter Loan
+|
 |Ter Laan
 |Ter Loanster
 |-
 |Diekshörn
+|
 |Westerdijkshorn
 |Diekshörnster
 |-
 |Wilmstreek
+|
 |Willemstreek
 |Wilmstreeker
 |-
 |Zuudwôlde
+|
 |Zuidwolde
 |Zuudwôlster
 |}
