--- a/Ni'jlusen.mw
+++ b/Ni'jlusen.mw
@@ -1,5 +1,5 @@
 <!--Spelling volgens Schoemaker-Ytsma: ao bi'j Nederlaans (a)a; oa bi'j Nederlaans o-->{{etelazie}}[[Bestaand:Nieuwleusener_Hulsterplas.jpg|thumb|300px|d'Olde Hulsterplas, Ni'jlusen]][[Bestaand:Nieuwleusen wapen 1954.svg|thumb|right|110px|'t Dörpswaopen]]
-'''Ni'jlusen''' (ok wal: ''Ni'jluusn''; ''Ni-jluuzn'' (spelling-Gallée)<ref name="Scholtmeijer" /> of ''Neilusen'' ([[Drèentse spelling]]); [[Nederlaands|Nederlaans]]: ''Nieuwleusen'') is een plaatse in [[Oaveriessel]] mit 5887 inwoners per [[1 jannewaori]] [[2011]] (2008: 5930, 2007: 5913, 2006: 5983).<ref>[http://www.dalfsen.nl/web/show/id=82665 Webstee van de gemiente Dalsen], gemientegidsen 2007-2008 en 2006-2007</ref> Bi'j de gemientelijke herindieling van [[2001]] is 't miest van de olde gemiente Ni'jlusen bi'j de [[Dalsen (gemiente)|gemiente Dalsen]] ekomen. Een aander diel is bi'j de gemiente [[Zwolle (Oaveriessel)|Zwolle]] edaone, waoronder een diel van de [[buurtschop]] [[De Lichtmis]].
+'''Ni'jlusen''' ([nɪj lyːzn̩] ok wal: ''Ni'jluusn''; ''Ni-jluuzn'' (spelling-Gallée)<ref name="Scholtmeijer" /> of ''Neilusen'' ([[Drèentse spelling]]); [[Nederlaands|Nederlaans]]: ''Nieuwleusen'') is een plaatse in [[Oaveriessel]] mit 5887 inwoners per [[1 jannewaori]] [[2011]] (2008: 5930, 2007: 5913, 2006: 5983).<ref>[http://www.dalfsen.nl/web/show/id=82665 Webstee van de gemiente Dalsen], gemientegidsen 2007-2008 en 2006-2007</ref> Bi'j de gemientelijke herindieling van [[2001]] is 't miest van de olde gemiente Ni'jlusen bi'j de [[Dalsen (gemiente)|gemiente Dalsen]] ekomen. Een aander diel is bi'j de gemiente [[Zwolle (Oaveriessel)|Zwolle]] edaone, waoronder een diel van de [[buurtschop]] [[De Lichtmis]].
 
 == Umgeving ==
 [[Bestaand:NieuwleusenZuid.jpg|thumb|left|De Karkenhoek bi'j winterdag]]
