*Empty MediaWiki Message*

--- a/Blokziel.mw
+++ b/Blokziel.mw
@@ -1,4 +1,4 @@
-'''Blokziel''' is een stattien in de [[Kop van Overiessel]] en maekt sund de gemientelike herindieling van [[1 jannewaori]] [[2001]] diel uut van de gemiente [[Stienwiekerlaand]]. Et stattien dankt heur naeme an een verstarkte sluus, de Blokziel. Blokziel het zoe'n 1.300 inwoners. Een bi'jnaeme veur de inwoners van Blokziel is ''katten''.
+'''Blokziel''' ([blɔ̟ksil]) is een stattien in de [[Kop van Overiessel]] en maekt sund de gemientelike herindieling van [[1 jannewaori]] [[2001]] diel uut van de gemiente [[Stienwiekerlaand]]. Et stattien dankt heur naeme an een verstarkte sluus, de Blokziel. Blokziel het zoe'n 1.300 inwoners. Een bi'jnaeme veur de inwoners van Blokziel is ''katten''.
 
 Blokziel het een eigen [[haeven]] veur de plezierveert en een [[sluus]]. Ok grotere rondveertenboten doen regelmatig Blokziel an as tussenstop. Op de [[kade]] staot een oold [[kenon]], waorbi'j [[toerisme|toeristen]] mekeer graeg op de foto zetten.
 
