--- a/Den_Hulst.mw
+++ b/Den_Hulst.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Huus an de Den Hulst.JPG|thumb|right|360px|Huus an de vierbaansweg de Den Hulst (N377)]]'''Den Hulst''', ok wal De Hulst (uutspraok vake: ''Nulst''<ref>''Nulst'' is een samentrekking van de ''-n'' van 't lidwoord en ''Ulst'', daoras de ''h'' van of is evalen (h-deletie), zoas det gebrukelijk is in Noordwest-Oaveriessel. ''Nulst'' heur ie veural nao een veurzetsel: ''Wi'j gaot naor 'n Ulst'', ''Zi'j woont op 'n Ulst.''</ref>) was een [[Oaveriessel]]se [[buurtschop]] an de [[Dedemsvaort (kenaal)|Dedemsvaort]], die töt 't noordelijke diel van 't dörp [[Ni'jlusen]] uutegruuid is. Daor praot ze nog aal van 'Den Hulst'. Een endtien boaven Den Hulst viej 't gehucht [[De Punt (Stappest)|De Punt]] in de gemiente [[Stappest]]; een endtien op 't oosten an lig [[De Balk]] in de gemiente [[Hardenbarg (gemiente)|Hardenbarg]]; en naor 't westen hej de Ni'jluseger buurtschop [[De Meele]] en 't kruuspunt van de [[Provinciaole weg 377|N377]] en de [[Rieksweg 28|A28]], [[De Lichtmis]].
+[[Ofbeelding:Huus an de Den Hulst.JPG|thumb|right|360px|Huus an de vierbaansweg de Den Hulst (N377)]]'''Den Hulst''', ok wal De Hulst (uutspraok vake: ''Nulst''<ref>''Nulst'' is een samentrekking van de ''-n'' van 't lidwoord en ''Ulst'', daoras de ''h'' van of is evalen (h-deletie), zoas det gebrukelijk is in Noordwest-Oaveriessel. ''Nulst'' heur ie veural nao een veurzetsel: ''Wi'j gaot naor 'n Ulst'', ''Zi'j woont op 'n Ulst.''</ref> [(də)nʌlst]) was een [[Oaveriessel]]se [[buurtschop]] an de [[Dedemsvaort (kenaal)|Dedemsvaort]], die töt 't noordelijke diel van 't dörp [[Ni'jlusen]] uutegruuid is. Daor praot ze nog aal van 'Den Hulst'. Een endtien boaven Den Hulst viej 't gehucht [[De Punt (Stappest)|De Punt]] in de gemiente [[Stappest]]; een endtien op 't oosten an lig [[De Balk]] in de gemiente [[Hardenbarg (gemiente)|Hardenbarg]]; en naor 't westen hej de Ni'jluseger buurtschop [[De Meele]] en 't kruuspunt van de [[Provinciaole weg 377|N377]] en de [[Rieksweg 28|A28]], [[De Lichtmis]].
 
 ==Ontstaon==
 [[Ofbeelding:Nulst.jpg|thumb|left|360px|De veurmaolige Dedemsvaort bi'j Den Hulst]]Uut begun [[18e eeuw|achttiende ieuw]] stamt de vermeldings 'in Den Hulst ofte op de Gracht' en 'aan de Grachte in de Oosterhulst' (de grachte is 't in de Plompenkolk uutmondende ofwateringskenaaltien de Beentjesgraven; de Oosterhulst is now een an de N377 geliek lopende weg an de oostkaante van Den Hulst).<ref>Sterken Rzn, H. (1976), ''Ni'j luusen mien dörpien'', Ni'jlusen: eigen beheer (p.14)</ref>
