([[c:GR|GR]])  [[File:Coat of Arms of Aa en Hunze.jpg]] → [[File:Aa en Hunze-wapen.svg]]

--- a/Aa_en_Hunze.mw
+++ b/Aa_en_Hunze.mw
@@ -1,7 +1,7 @@
 {{Gemeynde
 | name = Aa en Hunze
 | bestandsname vlagge = Flag of Aa en Hunze.svg
-| bestandsname wåpen = Coat of Arms of Aa en Hunze.jpg
+| bestandsname wåpen = Aa en Hunze-wapen.svg
 | lokaty = LocatieAaEnHunze
 | provincy = Drenthe
 | uppervlakde = 278,86
