--- a/Achtkarspelen.mw
+++ b/Achtkarspelen.mw
@@ -1,7 +1,7 @@
 {{Gemiente |
 naeme = Achtkarspelen |
 bestaansnaeme vlagge = Flag of Achtkarspelen.svg |
-bestaansnaeme waopen = Coat of arms of Achtkarspelen.jpg |
+bestaansnaeme waopen = Achtkarspelen seal.svg |
 lekaosie = LocatieAchtkarspelen |
 perveensie = [[Frieslaand]] |
 heufdplak = [[Butenpost]] | 
