*Empty MediaWiki Message*

--- a/Wikiwoordebook.mw
+++ b/Wikiwoordebook.mw
@@ -14,9 +14,9 @@ De engelske Wikiwoordebook (''Wiktionary'') begün up [[12 december]] [[2002]]. 
 
 Sinds [[1 meie|1 mei]] [[2004]] binnen der ouk andersspråkige Wikiwoordeboken begünnen. De eyrste andersspråkige versys waren in et [[fransk]] en [[Pools|poolsk]]. In mei 2009 waren der in totaal meyr as 5 miljoon lemmas in 272 verschillende språken. De engelsspråkige Wikiwoordebook had in mei 2021 meyr 6.650.000 lemmas, de neadersassiske versy meyr as 9.000.
 
-Vöäle lemmas binnen mid en [[bot]] maked dee lemmas üüt andere woordeboken importeert. De [[Fransk|franske]] en [[Vietnameesk|vietnameeske]] versys importeerden groute deylen van et ''[[Free Vietnamese Dictionary Project]]''. De franske versy groide in 2006 mirakels vlugge wat vöär en grout deyl te danken was an bots dee üüt vrye woordeboken sou as de [[Dictionnaire de l'Académie française]] importeerden.{{Wiktionary|Wiktionary}}
-{| class="interProjectTemplate toccolours" style="width:100%; margin:1em 0 -0.5em 0;"
-| height="28" width="34" |
-|Zoek '''''[https://nl.wiktionary.org/wiki/Wiktionary Wiktionary]''''' op in het  [[Wiktionary|WikiWoordenboek]].
-|}
+Vöäle lemmas binnen mid en [[bot]] maked dee lemmas üüt andere woordeboken importeert. De [[Fransk|franske]] en [[Vietnameesk|vietnameeske]] versys importeerden groute deylen van et ''[[Free Vietnamese Dictionary Project]]''. De franske versy groide in 2006 mirakels vlugge wat vöär en grout deyl te danken was an bots dee üüt vrye woordeboken sou as de [[Dictionnaire de l'Académie française]] importeerden.
+
+{{Wiktionary|Wiktionary}}
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
+
 [[Kategorie:Woordeboek]]
